# amazoom-warehouse-simulation

./: .gitignore  CMakeLists.txt  README.md
data/: merchandisecatalog.json
data/carrymerchandise/: carrymerchandise1.json
data/layout/: layout1.json
src/: CMakeLists.txt  customerclient.cpp  helloworld.cpp
src/api/: jsonconverterinterface.h  jsonoversocketapiinterface.h  requestinterface.h  responseinterface.h
src/api/customerwebtocentral/: customerwebtocentralapi.cpp  functionname.h  jsonconverter.cpp  request.cpp  response.cpp
src/centralcontroller/: botcontroller.h  centralcontroller.h  stockcontroller.h
src/centralcontroller/mock/: mockcentralcontroller.cpp
src/common/: CreateOrderResponse.h  location.h
src/reality/: item.cpp  item.h  itemspace.cpp  itemspace.h  location.cpp  location.h  realityexception.h  space.cpp  space.h  spacemanager.cpp  spacemanager.h  spacemanagerui.cpp  spacemanagerui.h
src/temp/: warehouse.cpp  warehouse.h
src/warehouse/: bot.cpp  bot.h  bottocentralclientmock.cpp  bottocentralclientmock.h  centralcontroller.cpp  centralcontroller.h  centralcontrollermain.cpp  warehouse.cpp  webclientfoo.cpp
src/warehouse/manager/: botmanager.cpp  botmanager.h  common.h  deliverymanager.cpp  deliverymanager.h  dynamicinstructionqueue.h  inventorymanager.cpp  inventorymanager.h  layoutmanager.cpp  layoutmanager.h  managerexception.h  ordermanager.cpp  ordermanager.h  shelfspacemanager.cpp  shelfspacemanager.h
src/warehouse/server/: customerwebtocentralserver.cpp  customerwebtocentralserver.h
test/: CMakeLists.txt
(+41 files in other folders)
